--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,22 @@
   margin: 0px;
 }
 
+.grow {
+  -moz-osx-font-smoothing: grayscale;
+  backface-visibility: hidden;
+  transform: translateZ(0);
+  transition: transform 0.25s ease-out;
+}
+
+.grow:hover,
+.grow:focus {
+  transform: scale(1.05);
+}
+
+.grow:active {
+  transform: scale(0.9);
+}
+
 /* body { */
 /* margin: 0; */
 /* display: flex; */
